<resources>
    <string name="app_name">Sense - Demo</string>
    <string name="text">Are you enjoying Sense?</string>
    <string name="supporting">Try it free for 14 days.</string>
    <string name="deviceInfo">Sense Protect Information</string>
    <string name="deviceInfoContent">Manage your team members and their account permissions here.</string>
    <string name="signup_btn">Sign Up Now</string>
    <string name="your_device">Your Device Details</string>
    <string name="your_device_info">You can review your device details here. </string>
    <string name="device_id">Sense ID</string>
    <string name="device_id_txt">******-******-******-******</string>
    <string name="copy">Copy</string>
    <string name="responseInfo">Device Details</string>
    <string name="responseInfoContent">Manage your team members and their account permissions here.</string>
    <string name="signals_head">Passive Signal details</string>
    <string name="signals_txt">Add yourself or import from CSV</string>
    <string name="raw_data">RAW Data</string>
    <string name="raw_data_txt">Add yourself or import from CSV</string>
    <string name="home">Home</string>
    <string name="docs">Pro</string>
    <string name="policy">Policy</string>
    <string name="support">Support</string>
    <string name="passive_signal_details">Passive Signal details</string>
    <string name="visit_information">Visit Information</string>
    <string name="user_activity">Device history based on user activity on the website or app</string>
    <string name="first_visited">First Visited</string>
    <string name="date_string">12 Jan 2024</string>
    <string name="purple_bg_txt">1 year since last visited</string>
    <string name="last_visited">Last Visited</string>
    <string name="green_bg_txt">12 Events</string>
    <string name="last_visited_txt">Today, 2:30PM</string>
    <string name="request_information">Request Details</string>
    <string name="request_information_txt">View the last recorded API response request information</string>
    <string name="request_id">Request ID</string>
    <string name="request_string_1">1722840728974.XivQyM</string>
    <string name="request_date_time">Requested Date &amp; Time</string>
    <string name="request_string_2">2024-07-23 12:22:35 PM</string>
    <string name="request_ip_address">IP Address</string>
    <string name="request_string_3">49.249.62.200</string>
    <string name="smart_signals">Smart Signals</string>
    <string name="smart_signals_txt">Checks for factors that could indicate website or app based risk</string>
    <string name="time_zone">Time Zone</string>
    <string name="asia_calcutta">Asia/Calcutta</string>
    <string name="time_zone_country">Time Zone Country</string>
    <string name="time_zone_country_txt">GMT+0530 (India Standard Time)</string>
    <string name="jailbreak">Jailbreak</string>
    <string name="not_detected">Not Detected</string>
    <string name="detected">Detected</string>
    <string name="factory_reset">Factory Reset</string>
    <string name="geolocation_spoofing">Geolocation Spoofing</string>
    <string name="frida">Frida</string>
    <string name="vpn">VPN</string>
    <string name="remote_control">Remote Control</string>
    <string name="proxy">Proxy</string>
    <string name="json_format">JSON format of API responses of the device</string>
    <string name="view_full_json">Complete JSON</string>
    <string name="detailed_summary">Detailed summary of the Device Details</string>
    <string name="root_access">Root Access</string>
    <string name="emulator">Emulator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apiPublictext">Enter your Email</string>
    <string name="apiSecrettext">Enter your Password</string>
    <string name="api_signup_btn">Submit</string>
    <string name="behvaiour_keystrokes">Behvaiour - Keystrokes</string>
    <string name="transaction">Transaction</string>
    <string name="sense_id">Sense ID</string>
    <string name="aecef8c_147b7b5_73c4s3u_v532bc7">aecef8c-147b7b5-73c4S3U-V532bc7</string>
    <string name="confidence_score">Confidence Score</string>
    <string name="score100">score100</string>
    <string name="matching_parameters">Matching Parameters</string>
    <string name="avgreleasetime">avgReleaseTime</string>
    <string name="avgtypingspeed">avgTypingSpeed</string>
    <string name="keystroke_score">KeyStroke Score</string>
    <string name="orientation_score">Orientation Score</string>
    <string name="orientation_parameters">Orientation Parameters</string>
    <string name="keystroke_parameters">Keystroke Parameters</string>
    <string name="factory_reset_date">2024-11-05T06:54:27.000Z</string>
    <string name="unknownApps">Malicious Apps</string>
    <string name="installedApps">Installed Apps</string>
    <string name="clonedApps">Cloned Apps</string>
    <string name="sim">SIM Details</string>
    <string name="sim_1">SIM 1 Details</string>
    <string name="sim_2">SIM 2 Details</string>
</resources>