<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="#FFFFFF"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        android:scrollbars="none"
        android:overScrollMode="never"
        android:fontFamily="@font/satoshi"
        android:layout_weight="1"
        tools:ignore="MissingConstraints">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            xmlns:android="http://schemas.android.com/apk/res/android">


            <LinearLayout
                android:id="@+id/frame_13213"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0.9"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <ImageView
                        android:id="@+id/group_1"
                        android:layout_width="93.07dp"
                        android:layout_height="29.99dp"
                        android:layout_gravity="center"
                        android:src="@drawable/group_1"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp"
                android:paddingVertical="16dp"
                android:background="@drawable/card"
                android:layout_marginTop="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:lineSpacingExtra="4sp"
                    android:text="@string/deviceInfo"
                    android:textFontWeight="700"
                    android:textAppearance="@style/deviceInfo" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/device_info_bg"
                android:orientation="vertical"
                android:layout_marginTop="16dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="16dp"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top"
                        android:lineSpacingExtra="4sp"
                        android:text="@string/smart_signals"
                        android:textFontWeight="500"
                        android:textAppearance="@style/your_device" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/smart_signals_txt"
                        android:textAppearance="@style/your_device_info"
                        android:lineSpacingExtra="1sp"
                        android:layout_marginTop="4dp"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#E4E7EC"
                    >
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="24dp"
                    android:orientation="vertical"
                    >
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:lineSpacingExtra="1sp"
                            android:text="@string/factory_reset"
                            android:textAppearance="@style/device_id" />
                        <TextView
                            android:id="@+id/factory_reset"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:lineSpacingExtra="2sp"
                            android:textFontWeight="500"
                            android:layout_marginTop="8dp"
                            android:text="@string/factory_reset_date"
                            android:textAppearance="@style/date_string" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:lineSpacingExtra="1sp"
                            android:layout_marginTop="24dp"
                            android:text="@string/root_access"
                            android:textAppearance="@style/device_id" />
                        <TextView
                            android:id="@+id/rootAccess"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:lineSpacingExtra="3sp"
                            android:textFontWeight="500"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="8dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/not_detected"
                            android:drawableStart="@drawable/check_circle"
                            android:drawablePadding="4dp"
                            android:text="@string/not_detected"
                            android:textAppearance="@style/no_detection_txt" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:lineSpacingExtra="1sp"
                            android:layout_marginTop="24dp"
                            android:text="@string/emulator"
                            android:textAppearance="@style/device_id" />
                        <TextView
                            android:id="@+id/emulator"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:lineSpacingExtra="3sp"
                            android:textFontWeight="500"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="8dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/detected"
                            android:drawableStart="@drawable/x_circle"
                            android:drawablePadding="4dp"
                            android:text="@string/detected"
                            android:textAppearance="@style/detection_txt" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:lineSpacingExtra="1sp"
                            android:layout_marginTop="24dp"
                            android:text="@string/frida"
                            android:textAppearance="@style/device_id" />
                        <TextView
                            android:id="@+id/isFrida"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:lineSpacingExtra="3sp"
                            android:textFontWeight="500"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="8dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/not_detected"
                            android:drawableStart="@drawable/check_circle"
                            android:drawablePadding="4dp"
                            android:text="@string/not_detected"
                            android:textAppearance="@style/no_detection_txt" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:lineSpacingExtra="1sp"
                            android:layout_marginTop="24dp"
                            android:text="@string/remote_control"
                            android:textAppearance="@style/device_id" />
                        <TextView
                            android:id="@+id/isRemoteControl"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:lineSpacingExtra="3sp"
                            android:textFontWeight="500"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="8dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/not_detected"
                            android:drawableStart="@drawable/check_circle"
                            android:drawablePadding="4dp"
                            android:text="@string/not_detected"
                            android:textAppearance="@style/no_detection_txt" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:lineSpacingExtra="1sp"
                            android:layout_marginTop="24dp"
                            android:text="@string/vpn"
                            android:textAppearance="@style/device_id" />
                        <TextView
                            android:id="@+id/vpn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:lineSpacingExtra="3sp"
                            android:textFontWeight="500"
                            android:paddingHorizontal="10dp"
                            android:paddingVertical="8dp"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/detected"
                            android:drawableStart="@drawable/x_circle"
                            android:drawablePadding="4dp"
                            android:text="@string/detected"
                            android:textAppearance="@style/detection_txt" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:lineSpacingExtra="1sp"
                            android:layout_marginTop="24dp"
                            android:text="@string/unknownApps"
                            android:textAppearance="@style/device_id" />
                        <com.google.android.flexbox.FlexboxLayout
                            android:id="@+id/unknownApps"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:flexWrap="wrap"
                            app:justifyContent="flex_start"
                            app:alignItems="flex_start"
                            android:layout_marginTop="8dp"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:lineSpacingExtra="1sp"
                            android:layout_marginTop="24dp"
                            android:text="@string/installedApps"
                            android:textAppearance="@style/device_id" />
                        <com.google.android.flexbox.FlexboxLayout
                            android:id="@+id/installedApps"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:flexWrap="wrap"
                            app:justifyContent="flex_start"
                            app:alignItems="flex_start"
                            android:layout_marginTop="8dp"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:lineSpacingExtra="1sp"
                            android:layout_marginTop="24dp"
                            android:text="@string/clonedApps"
                            android:textAppearance="@style/device_id" />
                        <com.google.android.flexbox.FlexboxLayout
                            android:id="@+id/clonedApps"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:flexWrap="wrap"
                            app:justifyContent="flex_start"
                            app:alignItems="flex_start"
                            android:layout_marginTop="8dp"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:lineSpacingExtra="1sp"
                            android:layout_marginTop="24dp"
                            android:text="@string/sim"
                            android:textAppearance="@style/device_id" />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:lineSpacingExtra="1sp"
                            android:layout_marginTop="24dp"
                            android:text="@string/sim_1"
                            android:textAppearance="@style/device_id" />
                        <com.google.android.flexbox.FlexboxLayout
                            android:id="@+id/sim_1_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:flexWrap="wrap"
                            app:justifyContent="flex_start"
                            app:alignItems="flex_start"
                            android:layout_marginTop="8dp"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_vertical"
                            android:lineSpacingExtra="1sp"
                            android:layout_marginTop="24dp"
                            android:text="@string/sim_2"
                            android:textAppearance="@style/device_id" />
                        <com.google.android.flexbox.FlexboxLayout
                            android:id="@+id/sim_2_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:flexWrap="wrap"
                            app:justifyContent="flex_start"
                            app:alignItems="flex_start"
                            android:layout_marginTop="8dp"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>